kubernetes/apps/s3/overlays/workload-prd/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3-console
  namespace: s3
spec:
  parentRefs:
    - name: external-services
      namespace: external-gateway
      sectionName: https-s3-console
  hostnames:
    - "s3.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: s3-console
          port: 9001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: s3-api
  namespace: s3
spec:
  parentRefs:
    - name: external-services
      namespace: external-gateway
      sectionName: https-s3-api
  hostnames:
    - "api.s3.yuriykovalchuk.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: s3-api
          port: 9000
